--- a/style.css
+++ b/style.css
@@ -1,26 +1,31 @@
+/* ОБЩИЕ НАСТРОЙКИ */
 html,body {
   height: 100%;
   margin: 0px;
+}
+* {
+  box-sizing: border-box;
 }
 .wrapper{
   min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
+/* БЛОК 1 */
 .fullscreen{
   min-height: 100vh;
-  background-color: rgb(236, 224, 224);
+  background-color: rgb(249, 240, 240);
   display: flex;
 }
 .fullscreen__body{
-  background-color: rgb(172, 218, 218);
+  /* background-color: rgb(172, 218, 218); */
   display: flex;
   flex-direction: column;
   flex: 1 1 auto;
-  max-width: 1000px;
+  max-width: 1300px;
   margin: 0px auto;
-
 }
+/* БЛОК 1 ПАНЕЛЬ МЕНЮ */
 .nav{
   width: 100%;
   height: 60px;
@@ -55,6 +60,10 @@ li {
 li:hover {
   background-color: rgb(247, 55, 55);
   border-radius: 5%;
+  cursor: pointer;
+}
+li:active {
+  background-color: rgba(247, 55, 55, 0.562);
 }
 a {
   display: block;
@@ -63,30 +72,120 @@ a {
   text-decoration: none;
   text-transform: uppercase;
 }
+/* БЛОК 1 КОНТЕНТ */
 .block__content {
   display: flex;
-  
+  margin-top: 70px;
 }
+/* БЛОК 1 ЛЕВЫЙ */
 .block__title {
   flex: 1 1 auto;
   width: 50%;
 }
+.title {
+  text-transform: uppercase;
+}
+.title_h1 {
+  font-size: 80px;
+  color: black;
+  font-weight: 900;
+}
+p {
+  color: grey;
+  margin: -30px 0px 0px 0px;
+  width: 450px;
+}
+.button__content {
+  border: 2px solid rgb(247, 55, 55);
+  border-radius: 5px;
+  background-color: rgb(247, 55, 55);
+  width: 250px;
+  height: 50px;
+  margin-top: 40px;
+  color: white;
+  font-size:15px;
+  text-transform: capitalize;
+  transition: 0.3s;
+}
+.button__content:hover {
+  background-color: rgba(247, 55, 55, 0);
+  color: rgb(247, 55, 55);
+  cursor: pointer;
+}
+.button__content:active {
+  box-shadow: 0px 0px 10px rgb(247, 55, 55);
+}
+/* БЛОК 1 ПРАВЫЙ */
 .block__video {
   flex: 1 1 auto;
   width: 50%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: end;
+}
+.video__wrapper {
+  display: inline-block;
+  width: 560px;
+  height: 360px;
+  box-shadow: 0px 0px 20px grey;
 }
 video {
-  background-color: blue;
+  width: 100%;
+  height: 100%;
+  /* background-color: blue; */
 }
-.main{
+/* ОСНОВНОЙ КОНТЕНТ БЛОК */
+.main {
   display: flex;
   flex-direction: column;
-  flex: 1 1 auto;
-  max-width: 1000px;
-  margin: 0px auto;
-  background-color: rgb(168, 103, 227);
+  align-items: center;
+  width: 100%;
 }
-.footer{
-  height: 30px;
-  background-color: brown;
+.main__section {
+  width: 1300px;
+  display: flex;
+  align-items: center; 
+  justify-content: center;
 }
+/* ОСНОВНОЙ БЛОК 1 */
+.content__wrap__1 {
+  width: 100%;
+  display: flex;
+  margin-top: 50px;
+  /* background-color: aquamarine; */
+}
+.title_h2 {
+  font-size: 40px;
+  color: rgb(52, 51, 51);
+  font-weight: 300;
+  margin-bottom: 50px;
+}
+/* ОСНОВНОЙ БЛОК 1 СПИСОК */
+.block__list {
+  width: 50%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  justify-content: end;
+  padding-top: 35px;
+}
+.list {
+  width: 300px;
+}
+h5 {
+  color: rgb(52, 51, 51);
+  font-size: 20px;
+  margin: 10px 0px 10px 0px;
+}
+/* ЛИНИЯ В КОНЦЕ БЛОКА */
+hr {
+  width: 85%;
+  height: 2px;
+  color: grey;
+  background-color: grey;
+  margin: 80px 0px 50px 0px;
+}
+
+/* БЛОК ПОДВАЛ */
+
+
