--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ html,body {
   display: flex;
   flex-direction: column;
   flex: 1 1 auto;
-  max-width: 1300px;
+  max-width: 1200px;
   margin: 0px auto;
 }
 /* БЛОК 1 ПАНЕЛЬ МЕНЮ */
@@ -57,12 +57,12 @@ li {
   margin: 0px 10px 0px 10px;
   transition: 0.5s;
 }
-li:hover {
+.nav__1__active:hover {
   background-color: rgb(247, 55, 55);
   border-radius: 5%;
   cursor: pointer;
 }
-li:active {
+.nav__1__active:active {
   background-color: rgba(247, 55, 55, 0.562);
 }
 a {
@@ -132,7 +132,6 @@ p {
 video {
   width: 100%;
   height: 100%;
-  /* background-color: blue; */
 }
 /* ОСНОВНОЙ КОНТЕНТ БЛОК */
 .main {
@@ -142,7 +141,7 @@ video {
   width: 100%;
 }
 .main__section {
-  width: 1300px;
+  width: 1200px;
   display: flex;
   align-items: center; 
   justify-content: center;
@@ -152,7 +151,6 @@ video {
   width: 100%;
   display: flex;
   margin-top: 50px;
-  /* background-color: aquamarine; */
 }
 .title_h2 {
   font-size: 40px;
@@ -170,22 +168,233 @@ video {
   padding-top: 35px;
 }
 .list {
-  width: 300px;
+  width: 250px;
+}
+.list__logo__size {
+  width: 50px;
+  height: 50px;
+  background-color: rgb(102, 55, 55);
+}
+.list__logo__1 {
+  background-image: url(./image/sprait_logo_list.jpg);
+  background-position: -89px -55px;
+}
+.list__logo__2 {
+  background-image: url(./image/sprait_logo_list.jpg);
+  background-position: -888px -55px;
+}
+.list__logo__3 {
+  background-image: url(./image/sprait_logo_list.jpg);
+  background-position: -89px -736px;
+}
+.list__logo__4 {
+  background-image: url(./image/sprait_logo_list.jpg);
+  background-position: -888px -736px;
 }
 h5 {
   color: rgb(52, 51, 51);
   font-size: 20px;
   margin: 10px 0px 10px 0px;
 }
-/* ЛИНИЯ В КОНЦЕ БЛОКА */
-hr {
+/* ЛИНИЯ В КОНЦЕ БЛОКА 1*/
+.line__1 {
   width: 85%;
   height: 2px;
   color: grey;
   background-color: grey;
   margin: 80px 0px 50px 0px;
 }
+/* БЛОК 2 FEATURE PRODUCTS */
+.content__wrap__2 {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+/* ЗАГОЛОВОК FEATURE PRODUCTS */
+.block__2__title {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.block__2__title__wrap {
+  text-align: center;
+  padding-top: 30px;
+}
+/* ЛИНИЯ КРАСНАЯ */
+.line__red {
+  width: 150px;
+  height: 2px;
+  color: rgb(247, 55, 55);
+  background-color: rgb(247, 55, 55);
+  margin: 30px 0px 60px 0px;
+}
+/* НАВИГАЦИЯ 2 */
+.block__2__nav {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 50px;
+}
+.block__2__nav__color {
+  color: grey;
+}
+.block__2__nav__color:hover {
+  color: rgb(103, 103, 210);
+}
+.block__2__nav__color:active {
+  text-shadow: 0px 0px 2px rgb(103, 103, 210);
+}
+/* КАРТИНКИ */
+.block__2__wrap__images {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 25px;
+  margin-bottom: 90px;
+}
+.block__2__imeg__size {
+  width: 280px;
+  height: 280px;
+  transition: 0.6s;
+}
+.block__2__imeg__size:hover {
+  width: 265px;
+  height: 265px;
+  cursor: pointer;
+}
+/* БЛОК 3 MEET OUR TEAM */
+.content__wrap__3 {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+/* БЛОК КАРТОЧЕК СОТРУДНИКОВ  */
+.wrapper__card__person {
+  width: 100%;
+  position: relative;
+}
+/* КАРТА СОТРУДНИКА */
+.card__person {
+  width: 100%;
+  position: absolute;
+  display: flex;
+  gap: 40px;
+}
+/* ЗАГЛАВНОЕ ФОТО СОТРУДНИКА  */
+.title__img__person{
+  width: 340px;
+  height: 380px;
+  background-color: rgb(101, 71, 129);
+  position: relative;
+}
+/* ВСПЛЫВАЮЩИЙ БЛОК ИМЯ СОТРУДНИКА */
+.wrap__title__name__person {
+  width: 100%;
+  height: 40px;
+  background-color: rgba(0, 0, 0, 0.547);
+  position: absolute;
+  bottom: 0%;
+  text-align: center;
+  display: none;
+}
+.title__name__person {
+  display: inline-block;
+  font-size: 18px;
+  width: 100%;
+  color: white;
+  margin-top: 10px;
+}
+.title__img__person:hover .wrap__title__name__person {
+  display: block;
+}
+/* БЛОК С ИНФОРМАЦИЕЙ СОТРУДНИКА И ФОТО КАРТЫ КОМАНДЫ */
+.wrap__info__team {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+/* ИНФОРМАЦИЯ ВЫБРАННОГО СОТРУДНИКА */
+.info__person {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  background-color: white;
+}
+.info__person__name {
+  font-size: 30px;
+  color: rgb(52, 51, 51);
+  margin: 10px 0px 20px 0px;
+}
+/* НАВИГАЦИЯ ПО СОЦИАЛЬНЫМ СЕТЯМ */
+.nav__social__media {
+  margin: 0px 20px 0px 0px;
+  padding: 0px;
+  transition: 0.1s;
+}
+.social__media {
+  font-size: 15px;
+  text-transform: capitalize;
+  font-style: italic;
+  color: rgb(52, 51, 51);
+  transition: 0.3s;
+}
+.social__media:hover {
+  font-size: 16px;
+}
+.nav__social__media:active {
+  text-shadow: 0px 0px 2px rgb(103, 103, 210);
+}
+/* БЛОК КАРТОЧКИ КОМАНДЫ */
+.wrap__team {
+  display: flex;
+  gap: 20px;
+}
+.team__person {
+  width: 210px;
+  height: 210px;
+  background-color: rgb(114, 75, 151);
+  position: relative;
+}
+/* ВСПЛЫВАЮЩИЕ ИМЯ СОТРУДНИКА КОМАНДЫ */
+.wrap__team__person__name {
+  width: 100%;
+  height: 30px;
+  background-color: rgba(0, 0, 0, 0.547);
+  position: absolute;
+  bottom: 0%;
+  text-align: center;
+  display: none;
+}
+.team__person__name {
+  display: inline-block;
+  font-size: 15px;
+  width: 100%;
+  color: white;
+  margin-top: 5px;
+}
+.team__person:hover .wrap__team__person__name{
+  display: block;
+}
+.card__person__1 {
+  z-index: 1;
+}
+.card__person__2 {
+  z-index: 0;
+}
+
+
+
+
 
 /* БЛОК ПОДВАЛ */
+.finish {
+  width: 100%;
+  height: 50px;
+  background-color: blue;
+  margin-top: 500px;
+}
 
 
