--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ a {
   text-transform: uppercase;
 }
 .title_h1 {
-  font-size: 80px;
+  font-size: 70px;
   color: black;
   font-weight: 900;
 }
@@ -378,11 +378,21 @@ h5 {
 .team__person:hover .wrap__team__person__name{
   display: block;
 }
+/* КАРТЫ СОТРУДНИКОВ КОМАНДЫ И ВЫБОР ПО НАЖАТИЮ */
 .card__person__1 {
-  z-index: 1;
+  z-index: -1;
 }
 .card__person__2 {
-  z-index: 0;
+  z-index: -2;
+}
+.card__person__3 {
+  z-index: -3;
+}
+.card__person__4 {
+  z-index: -4;
+}
+.card__person__5 {
+  z-index: -5;
 }
 
 
