--- a/style.css
+++ b/style.css
@@ -416,17 +416,58 @@ h5 {
   display: none;
 }
 
-
-
-
-
-
 /* БЛОК ПОДВАЛ */
-.finish {
+
+.footer {
   width: 100%;
-  height: 50px;
-  background-color: blue;
-  margin-top: 500px;
+  margin-top: 470px;
+  background-color: rgb(208, 198, 185);
 }
+.wrap__form__1 {
+  width: 100%;
+  height: 350px;
+  background-color: rgb(51, 49, 49);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.wrap__content__form__1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.form__1__title {
+  font-size: 40px;
+  color: white;
+  margin-top: 0px;
+}
+.form__1__text {
+  margin-top: -70px;
+  color: white;
+}
+.form__1 {
+  margin-top: 5px;
+}
+.form__1__email {
+  border: 2px solid white ;
+  border-radius: 5px;
+  width: 400px;
+  height: 50px;
+  font-size: 13px;
+  padding-top: 10px;
+  padding-left: 15px;
+  padding-bottom: 10px;
+  margin-right: 20px;
+  
+}
+border: 2px solid rgb(247, 55, 55);
+  border-radius: 5px;
+  background-color: rgb(247, 55, 55);
+  width: 250px;
+  height: 50px;
+  margin-top: 40px;
+  color: white;
+  font-size:15px;
 
 
