--- a/style.css
+++ b/style.css
@@ -432,6 +432,7 @@ h5 {
   justify-content: center;
 }
 .wrap__content__form__1 {
+  max-width: 1200px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -450,6 +451,7 @@ h5 {
   margin-top: 5px;
 }
 .form__1__email {
+  outline: none;
   border: 2px solid white ;
   border-radius: 5px;
   width: 400px;
@@ -461,13 +463,48 @@ h5 {
   margin-right: 20px;
   
 }
-border: 2px solid rgb(247, 55, 55);
-  border-radius: 5px;
-  background-color: rgb(247, 55, 55);
-  width: 250px;
-  height: 50px;
-  margin-top: 40px;
-  color: white;
-  font-size:15px;
+.form__1__button__size {
+  width: 180px;
+}
 
+/* БЛОК ФОРМЫ 2 */
+
+.wrap__form__2 {
+  width: 100%;
+  position: relative;
+}
+
+.wrap__content__form__2 {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  
+}
+
+.wrap__block__form__2 {
+  display: flex;
+  justify-content: space-between;
+}
+
+.wrap__element__form__2 {
+  display: flex;
+  flex-direction: column;
+}
+.block__contact__info{
+  z-index: 1;
+}
+.block__contact__info__background {
+  width: 500px;
+  height: 300px;
+  background-color: rgb(135, 39, 39);
+  position: absolute;
+  right: 0%;
+  bottom: 0%;
+}
+.footer__bottom {
+  width: 100%;
+  height: 50px;
+  background-color: rgb(26, 25, 25);
+  margin-top: 50px;
+}
 
