--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ html,body {
   display: flex;
   flex-direction: column;
 }
+
 /* БЛОК 1 */
 .fullscreen{
   min-height: 100vh;
@@ -18,7 +19,6 @@ html,body {
   display: flex;
 }
 .fullscreen__body{
-  /* background-color: rgb(172, 218, 218); */
   display: flex;
   flex-direction: column;
   flex: 1 1 auto;
@@ -579,6 +579,48 @@ h5 {
   transform: rotate(0deg);
   width: 20px;
   height: 20px;
+}
+
+/* БЛОК СТРЕЛКИ ВВЕРХ ВНИЗ */
+.wrap__arrows {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: -1;
+}
+.arrow__block {
+  height: 100%;
+  right: 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  position: absolute;
+  
+}
+.arrow__top {
+  width: 30px;
+  height: 30px;
+  border-top: 3px solid rgb(222, 86, 86);
+  border-left: 3px solid rgb(222, 86, 86);
+  transform: rotate(45deg);
+}
+.arrow__bottom {
+  width: 30px;
+  height: 30px;
+  border-right: 3px solid rgb(222, 86, 86);
+  border-bottom: 3px solid rgb(222, 86, 86);
+  transform: rotate(45deg);
+  
+}
+.arrow__top:hover {
+  border-top: 3px solid rgb(255, 0, 0);
+  border-left: 3px solid rgb(255, 0, 0);
+  cursor: pointer;
+}
+.arrow__bottom:hover {
+  border-right: 3px solid rgb(255, 0, 0);
+  border-bottom: 3px solid rgb(255, 0, 0);
+  cursor: pointer;
 }
 
 
