--- a/style.css
+++ b/style.css
@@ -129,6 +129,9 @@ p {
   height: 360px;
   box-shadow: 0px 0px 20px grey;
 }
+.video__play__button {
+  
+}
 video {
   width: 100%;
   height: 100%;
@@ -582,35 +585,58 @@ h5 {
 }
 
 /* БЛОК СТРЕЛКИ ВВЕРХ ВНИЗ */
-.wrap__arrows {
-  width: 100%;
-  height: 100%;
+
+.background__arrow__top {
   position: fixed;
-  z-index: -1;
-}
-.arrow__block {
-  height: 100%;
+  top: 10%;
   right: 5%;
+  width: 50px;
+  height: 55px;
+  background-color: rgba(222, 86, 86, 0);
+  border-radius: 20px;
   display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  position: absolute;
-  
+  align-items: center;
+  justify-content: center;
+  transition: 0.6s;
+}
+.background__arrow__top:hover {
+  background-color: rgba(222, 86, 86, 0.268);
 }
 .arrow__top {
+  position: absolute;
+  top: 22px;
   width: 30px;
   height: 30px;
   border-top: 3px solid rgb(222, 86, 86);
   border-left: 3px solid rgb(222, 86, 86);
   transform: rotate(45deg);
+  z-index: 100;
+}
+.background__arrow__bottom {
+  position: fixed;
+  bottom: 10%;
+  right: 5%;
+  width: 50px;
+  height: 55px;
+  background-color: rgba(222, 86, 86, 0);
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.6s;
+}
+.background__arrow__bottom:hover {
+  background-color: rgba(222, 86, 86, 0.268);
 }
 .arrow__bottom {
+  position: absolute;
+  bottom: 22px;
   width: 30px;
   height: 30px;
   border-right: 3px solid rgb(222, 86, 86);
   border-bottom: 3px solid rgb(222, 86, 86);
   transform: rotate(45deg);
-  
+  z-index: 100;
 }
 .arrow__top:hover {
   border-top: 3px solid rgb(255, 0, 0);
@@ -621,6 +647,20 @@ h5 {
   border-right: 3px solid rgb(255, 0, 0);
   border-bottom: 3px solid rgb(255, 0, 0);
   cursor: pointer;
+}
+.arrow__top__a {
+  color: rgba(238, 140, 12, 0);
+  transform: rotate(-45deg);
+  margin-left: -15px;
+  margin-top: -10px;
+  font-size: 25px;
+}
+.arrow__bottom__a {
+  color: rgba(138, 84, 13, 0);
+  transform: rotate(-45deg);
+  margin-left: -10px;
+  margin-top: 25px;
+  font-size: 20px;
 }
 
 
