--- a/style.css
+++ b/style.css
@@ -128,8 +128,18 @@ p {
   width: 560px;
   height: 360px;
   box-shadow: 0px 0px 20px grey;
+  position: relative;
 }
 .video__play__button {
+  position: absolute;
+  display: inline-block;
+  width: 60px;
+  height: 60px;
+  top: calc(50% - 30px);
+  left: calc(50% - 30px) ;
+  border: 3px solid gray;
+  border-radius: 30px;
+  background-color: rgba(0, 255, 255, 0.318);
   
 }
 video {
@@ -662,5 +672,42 @@ h5 {
   margin-top: 25px;
   font-size: 20px;
 }
+
+
+/* ЗАГРУЗОЧНЫЙ ЭКРАН */
+
+.preloader {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+  position: fixed;
+  z-index: 99;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  animation: preloader 1s linear forwards ;
+  animation-delay: 5s;
+}
+.loader {
+  border: 16px solid #f3f3f3;
+  border-top: 16px solid rgb(255, 0, 0); 
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 6s linear infinite;
+}
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+@keyframes preloader {
+  
+  to {
+    z-index: -999;
+    width: 0%;
+    height: 0%;
+  }
+}
+
 
 
