--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ html,body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  z-index: 1;
+  background-color: white;
 }
 
 /* БЛОК 1 */
@@ -694,7 +696,7 @@ h5 {
   border-radius: 50%;
   width: 120px;
   height: 120px;
-  animation: spin 6s linear infinite;
+  animation: spin 1s linear infinite;
 }
 @keyframes spin {
   0% { transform: rotate(0deg); }
