--- a/style.css
+++ b/style.css
@@ -697,7 +697,7 @@ h5 {
 
 /* ЗАГРУЗОЧНЫЙ ЭКРАН */
 
-/* .preloader {
+.preloader {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.9);
@@ -728,7 +728,7 @@ h5 {
     width: 0%;
     height: 0%;
   }
-} */
+}
 
 /* СТИЛЬ ПОЛОСЫ ПРОКРУТКИ */
 
