--- a/@media.css
+++ b/@media.css
@@ -128,3 +128,55 @@
     padding-left: 20px;
   }
 }
+
+@media (max-width: 799px) {
+  .fullscreen__body{
+    width: 100%;
+  }
+  .nav{
+    height: 35px;
+  }
+  .menu__1 {
+    display: none;
+  }
+  .line__button__nav__1 {
+    color: rgb(247, 55, 55);
+    background-color: rgb(247, 55, 55);
+  }
+  .nav__1__mobile__button {
+    display: inline-block;
+    position: relative;
+    width: 100px;
+  }
+  .nav__1__mobile__button:hover {
+    cursor: pointer;
+    width: 110px;
+  }
+  .nav__1__mobile {
+    display: none;
+    position: absolute;
+    top: 55px;
+    background-color: rgb(43, 32, 32);
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    text-align: center;
+  }
+  .nav__1__mobile__list {
+    color: white;
+    padding: 12px 16px;
+    display: block;
+  }
+  .nav__1__mobile__list:hover {
+    background-color: rgb(247, 55, 55);
+    border-radius: 5%;
+    cursor: pointer;
+  }
+  .nav__1__mobile__list:active {
+    background-color: rgba(247, 55, 55, 0.562);
+  }
+  #nav__mobile:checked + .nav__1__mobile {
+    display: block;
+  }
+  
+  
+}
