--- a/@media.css
+++ b/@media.css
@@ -177,6 +177,35 @@
   #nav__mobile:checked + .nav__1__mobile {
     display: block;
   }
+  .block__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 10px;
+  }
+  .title_h1 {
+    text-align: center;
+    font-size: 35px;
+    font-weight: 900;
+  }
+  p {
+    text-align: center;
+    width: 100%;
+    margin-top: 20px;
+  }
+  form {
+    text-align: center;
+  }
+  .block__video {
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
+  .video__wrapper {
+    margin-top: 50px;
+    width: 300px;
+    height: 192px;
+  }
   
   
 }
