--- a/@media.css
+++ b/@media.css
@@ -254,7 +254,7 @@
     margin: 0px 3px 0px 3px;
   }
   .block__2__nav__color {
-    font-size: 12px
+    font-size: 10px
   }
   .block__2__wrap__images {
     gap: 10px;
@@ -321,12 +321,13 @@
   /* БЛОК КАРТОЧКИ КОМАНДЫ */
   .wrap__team {
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     gap: 10px;
   }
   .team__person {
-    width: 110px;
-    height: 110px;
+    width: 140px;
+    height: 140px;
     position: relative;
   }
   .team__person__name {
@@ -336,14 +337,18 @@
 
   .footer {
     width: 100%;
-    margin-top: 570px;
+    margin-top: 740px;
   }
   .wrap__content__form__1 {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
   .form__1__title {
     text-align: center;
-    font-size: 30px;
+    font-size: 25px;
   }
   .form__1__text {
     margin-top: -60px;
@@ -351,7 +356,97 @@
   .form__1 {
     margin-top: 10px;
   }
+  .form__1__email {
+    width: 300px;
+    margin-right: 0px;
+  }
+  .form__1__button__size {
+    width: 300px;
+  }
   /* БЛОК ФОРМЫ 2 */
-  
+  .wrap__content__form__2 {
+    width: 100%;
+    margin-top: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .wrap__block__form__2 {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+    position: relative;
+  }
+  .wrap__element__form__2 {
+    width: 100%;
+    justify-content: center;
+    gap: 20px;
+  }
+  .form__2__line__1 {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+  .form__2__size {
+    width: 100%;
+    height: 40px;
+  }
+  textarea {
+    width: 100%;
+  }
+
+  .block__contact__info{
+    position: absolute;
+    left: 0%;
+    top: 400px;
+    height: 80px;
+    width: 100%;
+    background-color: rgb(26, 25, 25);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    padding-left: 5px;
+  }
+
+  /* ПОДВАЛ БЛОК*/
+
+  .footer__bottom {
+    width: 100%;
+    height: 110px;
+    background-color: rgb(26, 25, 25);
+    margin-top: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .footer__bottom__text {
+    color: grey;
+    margin-top: 10px;
+  }
+  .contact__info__title {
+    color: white;
+    font-size: 10px;
+    text-transform: uppercase;
+    margin: 0px;
+  }
+  .contact__info__address {
+    color: grey;
+    font-size: 10px;
+  }
+  .contact__info__mail {
+    text-transform: lowercase;
+    color: grey;
+    font-size: 10px;
+  }
+  .contact__info__phone {
+    color: grey;
+    font-size: 10px;
+  }
   
 }
