--- a/@media.css
+++ b/@media.css
@@ -3,6 +3,9 @@
   .fullscreen__body{
     width: 100%;
   }
+  .block__content {
+    padding: 0px 20px 0px 20px;
+  }
   .title_h1 {
     font-size: 45px;
     font-weight: 900;
@@ -18,6 +21,9 @@
      /* SECTION 1 */
   .main__section {
     width: 100%;
+  }
+  .content__wrap__1 {
+    padding: 0px 20px 0px 20px;
   }
   .title_h2 {
     font-size: 25px;
@@ -94,6 +100,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 0px 20px 0px 20px;
   }
   .p-form__2 {
     text-align: center;
@@ -186,6 +193,7 @@
   }
   .block__title {
     width: 100%;
+    padding: 0px 10px 0px 10px;
   }
   .title_h1 {
     text-align: center;
@@ -239,6 +247,9 @@
     width: 170px;
   }
   /* SECTION 2 */
+  .content__wrap__2 {
+    padding: 0px 10px 0px 10px;
+  }
   .block__2__title__wrap {
     padding-top: 10px;
   }
@@ -274,6 +285,7 @@
   .content__wrap__3 {
     width: 100%;
     align-items: center;
+    padding: 0px 10px 0px 10px;
   }
   .card__person {
     width: 100%;
@@ -345,6 +357,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 0px 10px 0px 10px;
   }
   .form__1__title {
     text-align: center;
@@ -383,6 +396,7 @@
     width: 100%;
     justify-content: center;
     gap: 20px;
+    padding: 0px 10px 0px 10px;
   }
   .form__2__line__1 {
     width: 100%;
