--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ html,body {
   height: 100%;
   margin: 0px;
 }
+body:hover {
+  cursor: url(./icons/cursor.png),default;
+}
 * {
   box-sizing: border-box;
 }
@@ -73,6 +76,7 @@ a {
   font-size:15px;
   text-decoration: none;
   text-transform: uppercase;
+  font-family: roboto;
 }
 /* БЛОК НАВИГАЦИИ ДЛЯ МОБИЛЬНОГО */
 #nav__mobile {
@@ -101,6 +105,7 @@ a {
   font-size: 70px;
   color: black;
   font-weight: 900;
+  font-family: roboto;
 }
 p {
   color: grey;
@@ -201,6 +206,7 @@ video {
   color: rgb(52, 51, 51);
   font-weight: 300;
   margin-bottom: 50px;
+  font-family: roboto;
 }
 /* ОСНОВНОЙ БЛОК 1 СПИСОК */
 .block__list {
@@ -239,6 +245,7 @@ h5 {
   color: rgb(52, 51, 51);
   font-size: 20px;
   margin: 10px 0px 10px 0px;
+  font-family: roboto;
 }
 /* ЛИНИЯ В КОНЦЕ БЛОКА 1*/
 .line__1 {
@@ -402,6 +409,9 @@ h5 {
   height: 210px;
   position: relative;
 }
+.team__person:hover {
+  cursor: url(./icons/cursor.png),default;
+}
 /* ВСПЛЫВАЮЩИЕ ИМЯ СОТРУДНИКА КОМАНДЫ */
 .wrap__team__person__name {
   width: 100%;
@@ -485,6 +495,7 @@ h5 {
   font-size: 40px;
   color: white;
   margin-top: 0px;
+  font-family: roboto;
 }
 .form__1__text {
   margin-top: -70px;
@@ -504,7 +515,9 @@ h5 {
   padding-left: 15px;
   padding-bottom: 10px;
   margin-right: 20px;
-  
+}
+.form__1__email:hover {
+  box-shadow: 0px 0px 10px rgb(247 55 55);
 }
 .form__1__button__size {
   width: 180px;
@@ -553,7 +566,9 @@ h5 {
   padding-left: 15px;
   padding-bottom: 10px;
   outline: none;
-
+}
+.form__2:hover {
+  box-shadow: 0px 0px 10px rgb(247 55 55);
 }
 .form__2__size {
   width: 50%;
@@ -706,7 +721,7 @@ h5 {
 
 /* ЗАГРУЗОЧНЫЙ ЭКРАН */
 
-/* .preloader {
+.preloader {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.9);
@@ -716,7 +731,7 @@ h5 {
   align-items: center;
   justify-content: center;
   animation: preloader 1s linear forwards ;
-  animation-delay: 5s;
+  animation-delay: 3s;
 }
 .loader {
   border: 16px solid #f3f3f3;
@@ -737,7 +752,7 @@ h5 {
     width: 0%;
     height: 0%;
   }
-} */
+} 
 
 /* СТИЛЬ ПОЛОСЫ ПРОКРУТКИ */
 
@@ -747,7 +762,7 @@ h5 {
 
 body {
   overflow-y: scroll;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 body::-webkit-scrollbar {
   width: 5px;
@@ -762,5 +777,9 @@ body::-webkit-scrollbar-thumb {
   border-radius: 5px;
 }
 
-
+/* FONTS  */
+@font-face {
+  font-family: roboto;
+  src: url(./fonts/RobotoMono-Bold.ttf);
+}
 
