--- a/style.css
+++ b/style.css
@@ -495,7 +495,8 @@ h5 {
   justify-content: center;
 }
 .form__1__title {
-  font-size: 40px;
+  font-size: 35px;
+  text-align: center;
   color: white;
   margin-top: 0px;
   font-family: roboto;
