--- a/style.css
+++ b/style.css
@@ -150,6 +150,9 @@ p {
   box-shadow: 0px 0px 20px grey;
   position: relative;
 }
+video {
+  object-fit: fill;
+}
 .video__play__button {
   position: absolute;
   display: inline-block;
