--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body:hover {
 }
 * {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 *::selection {
   background-color: rgb(247, 55, 55);
