--- a/style.css
+++ b/style.css
@@ -524,6 +524,9 @@ h5 {
   padding-bottom: 10px;
   margin-right: 20px;
 }
+.form__1__email:focus {
+  background-color: rgb(255, 244, 244);
+}
 .form__1__email:hover {
   box-shadow: 0px 0px 10px rgb(247 55 55);
 }
@@ -574,6 +577,9 @@ h5 {
   padding-left: 15px;
   padding-bottom: 10px;
   outline: none;
+}
+.form__2:focus {
+  background-color: rgb(255, 244, 244);
 }
 .form__2:hover {
   box-shadow: 0px 0px 10px rgb(247 55 55);
